--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>java-crypto-toolkit</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <description>A simplified toolkit for cryptography in java</description>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
