upgrading Junit version

--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,7 @@
         <maven.compiler.target>15</maven.compiler.target>
         <slf4j.version>1.7.28</slf4j.version>
         <logback.version>1.1.7</logback.version>
-        <junit.jupiter.version>5.5.2</junit.jupiter.version>
-        <junit.platform.version>1.5.2</junit.platform.version>
+        <junit.version>4.11</junit.version>
     </properties>
 
     <dependencies>
@@ -42,17 +41,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-runner</artifactId>
-            <version>${junit.platform.version}</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
